--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <section>
         <h1><u>Images</u></h1>
         
-        <img src="./index.html" alt="dog image" width="300px" height="200px"></br>
+        <img src="./image/beagle-dog.webp" alt="dog image" width="300px" height="200px"></br>
         <a href="https://www.google.com/search?q=beagle&rlz=1C5CHFA_enUS944US945&sxsrf=ALiCzsYi_xLzuX5-mgRt-U2UMiiEwhaCTA:1672839794160&source=lnms&tbm=isch&sa=X&ved=2ahUKEwiat8ntha78AhVnDbcAHX7UCYYQ_AUoAXoECAEQAw&biw=1629&bih=894&dpr=2.2">More Images</a>
       </section>
       <section>
